# microshop

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
diagrams/: ER_MICROSHOP.drawio  diagrama.mdj
sources/: Makefile  compose.yaml  development.env  docker-compose.yaml  env_template.env  testing.env
sources/docker/: docker-compose.yaml
sources/docker/ms-backend/: Dockerfile
sources/docker/ms-database/: Dockerfile
sources/docker/ms-database/certs/: ca-key.pem  ca.pem  server-cert.pem  server-key.pem  server-req.pem
sources/ms-api_gateway/: Dockerfile  nginx.conf
sources/ms-auth/: settings.gradle
sources/ms-auth/app/: build.gradle
sources/ms-backend/: .gitignore  .project  Dockerfile  regex_friendly_name.txt  settings.gradle
sources/ms-backend/app/: .factorypath  .project  build.gradle
sources/ms-catalog/: .gitignore  settings.gradle
sources/ms-catalog/app/: build.gradle
sources/ms-catalog/docker/: Dockerfile
sources/ms-data_importer/: data_import.py  pyproject.toml
sources/ms-database/: CREATING_TLS_CERTIFICATES.md  Dockerfile
sources/ms-database/config/: microshop.cnf
sources/ms-frontend/: Dockerfile  README.md  biomec.json  components.d.ts  eslint.config.js  frontend-nginx.conf  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
sources/ms-frontend/src/: App.vue  main.ts
sources/ms-frontend/src/assets/: main.css
sources/ms-frontend/src/components/: BreadcrumbBar.vue  BreadcrumbsComponent.vue  CategoryHeader.vue  CategoryListing.vue  CategoryTitle.vue  HeaderComponent.vue  HotlinkBar.vue  HotlinkButton.vue  ProductBox.vue  ProductShelf.vue  ProfileComponent.vue  SearchBar.vue  SortingBar.vue  SortingDropdown.vue  SubcategoryListing.vue  SubcategorySelection.vue
sources/ms-frontend/src/router/: index.ts  router.ts
sources/ms-frontend/src/sass/: style.scss
sources/ms-image/: settings.gradle
sources/ms-image/app/: build.gradle
sources/ms-image_store/: .gitignore  settings.gradle
sources/ms-image_store/app/: build.gradle
sources/ms-image_store/docker/: Dockerfile
sources/ms-javawebscraper/: .gitignore  settings.gradle
sources/ms-javawebscraper/app/: build.gradle
sources/ms-webscraper/: pyproject.toml  webscraper.py
sources/ms-webscrapper/: pyproject.toml  webscrapper.py
(+203 files in other folders)
