[project]
name = "ms-data-importer"
version = "0.1.0"
description = ""
authors = [
    {name = "lssv6",email = "lucassousasilva@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
